--- a/examples/index.html
+++ b/examples/index.html
@@ -209,7 +209,7 @@
 
 				new RGBELoader()
 					.setPath( 'textures/' )
-					.load( 'studio.hdr', function ( texture ) {
+					.load( 'Studio.hdr', function ( texture ) {
 
 						texture.mapping = THREE.EquirectangularReflectionMapping;
 
