--- a/examples/index.html
+++ b/examples/index.html
@@ -512,6 +512,12 @@
 
 			function animate() {
 
+				target.x = ( 1 - mouse.x ) * 0.0002;
+				target.y = ( 1 - mouse.y ) * 0.0002;
+				
+				camera.rotation.x += 0.05 * ( target.y - camera.rotation.x );
+				camera.rotation.y += 0.05 * ( target.x - camera.rotation.y );
+
 				requestAnimationFrame( animate );
 
 				render();
