--- a/examples/index.html
+++ b/examples/index.html
@@ -512,8 +512,8 @@
 
 			function animate() {
 
-				target.x = ( 1 - mouse.x ) * 0.0002;
-				target.y = ( 1 - mouse.y ) * 0.0002;
+				target.x = ( 1 - mouse.x );
+				target.y = ( 1 - mouse.y );
 				
 				camera.rotation.x += 0.05 * ( target.y - camera.rotation.x );
 				camera.rotation.y += 0.05 * ( target.x - camera.rotation.y );
