--- a/examples/index.html
+++ b/examples/index.html
@@ -94,7 +94,12 @@
 				camera = new THREE.PerspectiveCamera( 30, window.innerWidth / window.innerHeight, 0.2, 2000 );
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xFFFFFF );
+				//scene.background = new THREE.Color( 0xFFFFFF );
+				var fogColor = new THREE.Color(0x000033);
+ 
+				scene.background = fogColor;
+				scene.fog = new THREE.Fog(fogColor, 500, 1000);
+
 
 				camera.position.set( -200, -400, -200 );
 				camera.lookAt(0, -100, 0 );
